Bedrock LLM added

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 fastmcp>=2.0
-sentence-transformers
-transformers
+# sentence-transformers
+# transformers
 torch
 uvicorn
 httpx
+boto3
+scikit-learn
